--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <footer>
         <div class="text-center mt-6">
-            <p>&copy; 2025 - <strong>Desenvolvido por: Gabriel Alves de Macedo</strong></p>
+            <p><strong>&copy; 2025 - Desenvolvido por: Gabriel Alves de Macedo</strong></p>
         </div>
     </footer>
 
